Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.0.0
-
None
Description
- Start Qt Creator
- Open a project that is configured with a MSVC Kit
- Run the Clang Static Analyzer
An issue is displayed:
Clang Static Analyzer: Invalid executable "D:/usr/qtcreator-4.0.0/bin/clang-cl", stop.
Attachments
Issue Links
- is duplicated by
-
QTCREATORBUG-16262 Failed to run Static Analyser
- Closed
For Gerrit Dashboard: QTCREATORBUG-16234 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
158909,6 | Clang: Fix accepting absolute path clang executable | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |